# FlowSignal

./: .env.example  .gitignore  README.md  pyproject.toml
config/: universe.yaml
docs/: STATUS.md  handoff.md  m2-evaluation.md  m3-design.md  prediction-design.md  requirements.md
scripts/: fetch_daily.py  measure_tokens.py  train_baseline.py  train_cross_section.py
src/flowsignal/: __init__.py  config.py
src/flowsignal/data/: __init__.py  market.py  news.py  prices.py  storage.py
src/flowsignal/eval/: __init__.py  baselines.py  calibration.py  cross_section_metrics.py  hold.py  metrics.py  split.py
src/flowsignal/features/: __init__.py  build.py  cross_section.py  labels.py  market.py  technical.py
src/flowsignal/models/: __init__.py  baseline.py
tests/: test_baseline.py  test_build.py  test_config.py  test_cross_section.py  test_eval.py  test_hold.py  test_labels.py  test_market.py  test_technical.py
