[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowsignal"
version = "0.1.0"
description = "日本株の翌営業日の値動き方向を、市場データと時事ニュースのハイブリッドで予測する PoC"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",       # parquet 入出力
    "yfinance>=0.2.40",    # 株価・指数・為替（無料）
    "feedparser>=6.0",     # ニュース RSS
    "requests>=2.31",      # J-Quants API
    "python-dotenv>=1.0",  # .env からの認証情報読み込み
    "PyYAML>=6.0",         # universe.yaml の読み込み
]

[project.optional-dependencies]
# M2 以降で利用（モデル・特徴量・ダッシュボード）
# テクニカル指標は numpy 2.x / py3.9 で配布の無い pandas-ta に依存せず自前実装する
# （src/flowsignal/features/technical.py）。リーク防止の観点でも計算を内製化する。
ml = ["scikit-learn>=1.3", "lightgbm>=4.0"]
app = ["streamlit>=1.30"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
